@@ -448,7 +448,7 @@ int hide(object *op, object *skill) {
  * of jumping.
  */
 static void stop_jump(object *pl, int dist, int spaces) {
-    fix_player(pl);
+    fix_object(pl);
     insert_ob_in_map(pl,pl->map,pl,0);
 }
 
